Make package production-ready
- Add modern pyproject.toml with full configuration
- Add GitHub Actions CI workflow for testing across Python versions
- Add CONTRIBUTING.md with development guidelines
- Add CHANGELOG.md with version history
- Add pre-commit configuration for code quality
- Add tests directory with initial test suite
- Add py.typed marker for type checking support
- Update .gitignore with comprehensive patterns
- Simplify setup.py for backward compatibility
- Add CI badge to README

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ build/
 dist/
 *.egg-info/
 .eggs/
+*.egg
+MANIFEST
+pip-wheel-metadata/
+*.whl
 
 # LaTeX auxiliary files
 *.aux
@@ -40,14 +44,58 @@ dist/
 venv/
 env/
 .env/
+.venv/
+ENV/
 
 # IDE
 .idea/
 .vscode/
+*.swp
+*.swo
+*~
 
 # OS files
 .DS_Store
 Thumbs.db
+Desktop.ini
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+coverage.xml
+*.cover
+.hypothesis/
+.nox/
+.tox/
+
+# Type checking
+.mypy_cache/
+.pytype/
+
+# Documentation
+docs/_build/
+site/
+
+# Profiling
+*.prof
+*.lprof
+
+# Logs
+*.log
+logs/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.temp
+
+# Secrets (never commit these!)
+.env.local
+.env.*.local
+secrets.json
+credentials.json
 
 # Temporary files
 *.tmp
