Add quantum solvers (HHL, 1-BQF) and three E2E demo notebooks
- Fully implement HHL and OneBitHHL quantum solvers from deprecated code
- Add classical_end_to_end.ipynb: full pipeline with scalability & noise scans
- Add quantum_hhl_end_to_end.ipynb: HHL solver with time-qubit sweep
- Add quantum_1bqf_end_to_end.ipynb: 1-BQF solver with shot study & circuit comparison
- All notebooks verified: 100% reconstruction efficiency on clean events
- HHL cosine sim 0.9946, 1-BQF cosine sim 0.9146 on 12-segment Hamiltonian
- 1-BQF circuit 3.4x shallower, 3.6x fewer gates than full HHL
- Move old code to deprecated/, add LICENSE, update README, add pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "lhcb-velo-toy"
 version = "2.0.0"
 description = "LHCb VELO detector simulation and track reconstruction with quantum algorithms"
 readme = "README.md"
-license = {text = "MIT"}
+license = {file = "LICENSE"}
 authors = [
     {name = "George William Scriven"},
     {name = "Xenofon Chiotopoulos"},
