docs: update all documentation and presentation to match codebase
- Fix README: validation API, plotting functions, package structure (entities/ not models/), performance table, examples section
- Fix API_REFERENCE: remove deprecated classes (CPP wrapper, MultiScatteringGenerator), fix signatures, add missing methods/properties
- Fix DEPENDENCIES: update module names, import graph, pyproject.toml excerpt, remove C++ section
- Fix FLOW_DIAGRAMS: update module dependency graph, class hierarchy (no CPP wrapper)
- Fix WORKFLOW_OVERVIEW: match_tracks params, make_noisy_event params, Match fields, plotting functions
- Fix index.md: remove RESTRUCTURING_PROPOSAL ref, remove MultiScatteringGenerator, fix code examples
- Fix deprecated/README: models/ -> entities/, update migration status
- Fix presentation.tex: correct PlaneGeometry/StateEventGenerator constructors, generation flow, make_noisy_event call, quantum solver status
- Update .gitignore for LaTeX build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,16 @@ build/
 *.swp
 *.swo
 
+# LaTeX build artifacts
+docs/presentation.aux
+docs/presentation.log
+docs/presentation.nav
+docs/presentation.out
+docs/presentation.snm
+docs/presentation.toc
+docs/presentation.vrb
+docs/presentation.pdf
+
 # OS
 .DS_Store
 Thumbs.db
